# Ordo

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ordo/: __init__.py  __main__.py  app.py  util.py
tests/: test_app.py  test_util.py
