[project]
name = "ordo"
version = "0.0.1"
license = { file = "LICENSE" }
readme = "README.md"
dynamic = ["dependencies"]
authors = [{ "name" = "Allen Wang" }]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
